force-app/main/default/objects/Comp_Calculation__c/Comp_Calculation__c.object-meta.xml
<CustomObject>
    <description>The immutable financial ledger that records every compensation calculation for audit and payment tracking.</description>
    <label>Comp Calculation</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Comp Calculation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comp Calculations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>