force-app/main/default/objects/Comp_Calculation__c/fields/Accelerators_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Accelerators_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Payment</label>
    <type>Checkbox</type>
</CustomField>