force-app/main/default/objects/Comp_Calculation__c/fields/Accrued_Accelerators__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Accelerators__c</fullName>
    <label>Accrued Accelerators</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>