force-app/main/default/objects/Comp_Calculation__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Original</fullName><default>false</default><label>Original</label></value>
            <value><fullName>Amendment</fullName><default>false</default><label>Amendment</label></value>
            <value><fullName>Reversal</fullName><default>false</default><label>Reversal</label></value>
            <value><fullName>Clawback</fullName><default>false</default><label>Clawback</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>