force-app/main/default/objects/Comp_Calculation__c/fields/Applicable_Date__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Date__c</fullName>
    <label>Applicable Date</label>
    <type>Date</type>
</CustomField>