force-app/main/default/objects/Comp_Calculation__c/fields/Applied_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Applied_Percentage__c</fullName>
    <label>Applied Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>