force-app/main/default/objects/Comp_Calculation__c/fields/Attainment_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Snapshot__c</fullName>
    <label>Attainment Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>