force-app/main/default/objects/Comp_Calculation__c/fields/Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Status__c</fullName>
    <label>Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Projected</fullName><default>false</default><label>Projected</label></value>
            <value><fullName>Validated</fullName><default>false</default><label>Validated</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Reversed</fullName><default>false</default><label>Reversed</label></value>
            <value><fullName>Clawback</fullName><default>false</default><label>Clawback</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>