force-app/main/default/objects/Comp_Calculation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>