force-app/main/default/objects/Comp_Calculation__c/fields/Commisionable_Date__c.field-meta.xml
<CustomField>
    <fullName>Commisionable_Date__c</fullName>
    <label>Commissionable Date</label>
    <type>Date</type>
</CustomField>