force-app/main/default/objects/Comp_Calculation__c/fields/Commisionable_Value__c.field-meta.xml
<CustomField>
    <fullName>Commisionable_Value__c</fullName>
    <label>Commissionable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>