force-app/main/default/objects/Comp_Calculation__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <label>Comp Plan</label>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Comp Calculations</relationshipLabel>
    <relationshipName>Comp_Calculations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>