force-app/main/default/objects/Comp_Calculation__c/fields/Comp_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan_Type__c</fullName>
    <label>Comp Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Flat</fullName><default>false</default><label>Flat</label></value>
            <value><fullName>Tiered</fullName><default>false</default><label>Tiered</label></value>
            <value><fullName>Accelerated</fullName><default>false</default><label>Accelerated</label></value>
            <value><fullName>Gross_Margin</fullName><default>false</default><label>Gross_Margin</label></value>
            <value><fullName>Recurring</fullName><default>false</default><label>Recurring</label></value>
            <value><fullName>Milestone</fullName><default>false</default><label>Milestone</label></value>
            <value><fullName>Activity_Based</fullName><default>false</default><label>Activity_Based</label></value>
            <value><fullName>Team_Pool</fullName><default>false</default><label>Team_Pool</label></value>
            <value><fullName>Team_Override</fullName><default>false</default><label>Team_Override</label></value>
            <value><fullName>SPIFF</fullName><default>false</default><label>SPIFF</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>