force-app/main/default/objects/Comp_Calculation__c/fields/Contract_Date2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date2__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>