force-app/main/default/objects/Comp_Calculation__c/fields/Eligible_Commission__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Commission__c</fullName>
    <label>Eligible Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>