force-app/main/default/objects/Comp_Calculation__c/fields/Eligible_Rate_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Rate_Ratio__c</fullName>
    <label>Eligible Rate Ratio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>