force-app/main/default/objects/Comp_Calculation__c/fields/Force_Recalc__c.field-meta.xml
<CustomField>
    <fullName>Force_Recalc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Recalculation</label>
    <type>Checkbox</type>
</CustomField>