force-app/main/default/objects/Comp_Calculation__c/fields/Fx_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fx_Rate__c</fullName>
    <label>Fx Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>