force-app/main/default/objects/Comp_Calculation__c/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Collection_Pending</fullName><default>false</default><label>Collection_Pending</label></value>
            <value><fullName>Milestone_Pending</fullName><default>false</default><label>Milestone_Pending</label></value>
            <value><fullName>Approval_Pending</fullName><default>false</default><label>Approval_Pending</label></value>
            <value><fullName>Time_Hold</fullName><default>false</default><label>Time_Hold</label></value>
            <value><fullName>Custom_Hold</fullName><default>false</default><label>Custom_Hold</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>