force-app/main/default/objects/Comp_Calculation__c/fields/Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Hold_Status__c</fullName>
    <description>Independent dimension from Calculation_Status__c. A record can be Validated + Held simultaneously. Calculation_Status does NOT change when a hold is applied.</description>
    <label>Hold Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not_Held</fullName><default>true</default><label>Not Held</label></value>
            <value><fullName>Held</fullName><default>false</default><label>Held</label></value>
            <value><fullName>Partially_Released</fullName><default>false</default><label>Partially Released</label></value>
            <value><fullName>Released</fullName><default>false</default><label>Released</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>