force-app/main/default/objects/Comp_Calculation__c/fields/Hold_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Hold_Threshold__c</fullName>
    <label>Hold Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>