force-app/main/default/objects/Comp_Calculation__c/fields/Imported_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Imported_Transaction__c</fullName>
    <description>Will become Lookup to Imported_Transaction__c in Wave 5</description>
    <label>Imported Transaction</label>
    <length>18</length>
    <type>Text</type>
</CustomField>