force-app/main/default/objects/Comp_Calculation__c/fields/No_Quota_Retirement__c.field-meta.xml
<CustomField>
    <fullName>No_Quota_Retirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Quota Retirement</label>
    <type>Checkbox</type>
</CustomField>