force-app/main/default/objects/Comp_Calculation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comp Calculations</relationshipLabel>
    <relationshipName>Comp_Calculations_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>