force-app/main/default/objects/Comp_Calculation__c/fields/PCR__c.field-meta.xml
<CustomField>
    <fullName>PCR__c</fullName>
    <label>Collection %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>