force-app/main/default/objects/Comp_Calculation__c/fields/Processing_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Processing_Run_Id__c</fullName>
    <label>Processing Run Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>