force-app/main/default/objects/Comp_Calculation__c/fields/Quota_Category__c.field-meta.xml
<CustomField>
    <fullName>Quota_Category__c</fullName>
    <label>Quota Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New_Business</fullName><default>false</default><label>New_Business</label></value>
            <value><fullName>Renewal</fullName><default>false</default><label>Renewal</label></value>
            <value><fullName>Expansion</fullName><default>false</default><label>Expansion</label></value>
            <value><fullName>Services</fullName><default>false</default><label>Services</label></value>
            <value><fullName>Training</fullName><default>false</default><label>Training</label></value>
            <value><fullName>Product_Sale</fullName><default>false</default><label>Product_Sale</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>