force-app/main/default/objects/Comp_Calculation__c/fields/Quota_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Amount__c</fullName>
    <label>Quota Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>