force-app/main/default/objects/Comp_Calculation__c/fields/Quota_Credit_Source__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Source__c</fullName>
    <label>Quota Credit Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>