force-app/main/default/objects/Comp_Calculation__c/fields/Rate_Override_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rate_Override_Applied__c</fullName>
    <label>Rate Override Applied</label>
    <length>100</length>
    <type>Text</type>
</CustomField>