force-app/main/default/objects/Comp_Calculation__c/fields/Rate_Tier_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rate_Tier_Applied__c</fullName>
    <label>Rate Tier Applied</label>
    <length>50</length>
    <type>Text</type>
</CustomField>