force-app/main/default/objects/Comp_Calculation__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>