force-app/main/default/objects/Comp_Calculation__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Comp Calculations</relationshipLabel>
    <relationshipName>Comp_Calculations_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>