force-app/main/default/objects/Comp_Calculation__c/fields/Rep_Active__c.field-meta.xml
<CustomField>
    <fullName>Rep_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Participant Active</label>
    <type>Checkbox</type>
</CustomField>