force-app/main/default/objects/Comp_Calculation__c/fields/Rep_Category__c.field-meta.xml
<CustomField>
    <fullName>Rep_Category__c</fullName>
    <label>Participant Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>