force-app/main/default/objects/Comp_Calculation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Base</fullName><default>false</default><label>Base</label></value>
            <value><fullName>Accelerator</fullName><default>false</default><label>Accelerator</label></value>
            <value><fullName>Adjustment</fullName><default>false</default><label>Adjustment</label></value>
            <value><fullName>Clawback</fullName><default>false</default><label>Clawback</label></value>
            <value><fullName>Reversal</fullName><default>false</default><label>Reversal</label></value>
            <value><fullName>Recurring</fullName><default>false</default><label>Recurring</label></value>
            <value><fullName>Override</fullName><default>false</default><label>Override</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>